force-app/main/default/objects/Customer_Services_Team__c/Customer_Services_Team__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - This object defines the support information</description>
    <label>Customer Services Team</label>
    <nameField>
        <label>Customer Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Services Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>