force-app/main/default/objects/Customer_Services_Team__c/fields/AgentDevName__c.field-meta.xml
<CustomField>
    <fullName>AgentDevName__c</fullName>
    <description>Refer to Agent Dev name setting up the Live Chat</description>
    <label>AgentDevName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>