force-app/main/default/objects/Customer_Services_Team__c/fields/baseLiveAgentContentURL__c.field-meta.xml
<CustomField>
    <fullName>baseLiveAgentContentURL__c</fullName>
    <description>Contains Base Live Agent Content URL from Embedded Service</description>
    <label>Base Live Agent Content URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>