force-app/main/default/objects/Customer_Services_Team__c/fields/baseLiveAgentURL__c.field-meta.xml
<CustomField>
    <fullName>baseLiveAgentURL__c</fullName>
    <description>Contains Base Live Agent URL from Embedded Service</description>
    <label>Base Live Agent URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>