force-app/main/default/objects/Customer_Services_Team__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <description>Team&apos;s Working Hours</description>
    <inlineHelpText>Team&apos;s Working Hours</inlineHelpText>
    <label>Business Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>