force-app/main/default/objects/Customer_Services_Team__c/fields/Business_Hours_In_Turkish__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_In_Turkish__c</fullName>
    <inlineHelpText>Team&apos;s Working Hours (In turkish)</inlineHelpText>
    <label>Business Hours(In Turkish)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>