force-app/main/default/objects/Customer_Services_Team__c/fields/Button_ID__c.field-meta.xml
<CustomField>
    <fullName>Button_ID__c</fullName>
    <description>Refer to button Id setting up the Live Chat</description>
    <label>Button ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>