force-app/main/default/objects/Customer_Services_Team__c/fields/Chat_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Chat_Deployment__c</fullName>
    <description>Refer to chat deployment Id setting up the Live Chat</description>
    <label>Chat Deployment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>