force-app/main/default/objects/Customer_Services_Team__c/fields/Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Id__c</fullName>
    <description>Refer to deployment Id setting up the Live Chat</description>
    <label>Deployment Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>