force-app/main/default/objects/Customer_Services_Team__c/fields/Hotline_Number__c.field-meta.xml
<CustomField>
    <fullName>Hotline_Number__c</fullName>
    <inlineHelpText>Region Hotline Number</inlineHelpText>
    <label>Hotline Number</label>
    <type>Phone</type>
</CustomField>