force-app/main/default/objects/Customer_Services_Team__c/fields/Signature_Address__c.field-meta.xml
<CustomField>
    <fullName>Signature_Address__c</fullName>
    <label>Signature Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>