force-app/main/default/objects/Customer_Services_Team__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <description>SLA of the Team</description>
    <inlineHelpText>SLA of team(in Days)</inlineHelpText>
    <label>SLA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>